--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -42,6 +42,10 @@
     color: rgb(117, 117, 117);
 }
 
+.text_center {
+    text-align: center;
+}
+
 /* header */
 .header {
     background-image: url(../images/developer.png), url(../images/header_bg.png);
@@ -107,12 +111,15 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin: 130px 0 130px 0;
+}
+
 /* About styles */
 .about {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 }
 .about_items {
     display: flex;
@@ -120,4 +127,17 @@ main {
 }
 .item_description {
     font-weight: 600;
+}
+
+/* Skills sec. start */
+.skills_container {
+    display: flex;
+    gap: 24px;
+    margin-top: 60px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
